Fixed first and second assingment

--- a/JSzadaca.html
+++ b/JSzadaca.html
@@ -55,3 +55,12 @@
         </div>
     </body>
 </html>
+
+
+
+<!-- Fixed assingment 1
+    where at click while input is empty shows "1" -->
+
+<!-- Fixed assingment 2
+where alert was shown for each value that we get 
+( now we get one alert ) -->
