6 zadatak (button 4 problem)

--- a/JSzadaca.html
+++ b/JSzadaca.html
@@ -51,6 +51,26 @@
                 <div>JSON string</div>
                 <button type="button" onclick="zadatak5()">Confirm</button>
             </div>
+            <div class="divs">
+                <div></div>
+                <button type="button" onclick="zadatak6()">Generate</button>
+            </div>
+            <div class="divs">
+                <div></div>
+                <button type="button" onclick="personCount()">Person count</button>
+            </div>
+            <div class="divs">
+                <div></div>
+                <button type="button" onclick="lastPerson()">Last person</button>
+            </div>
+            <div class="divs">
+                <div></div>
+                <button type="button" onclick="highestPerson()">Highest person</button>
+            </div>
+            <div class="divs">
+                <div></div>
+                <button type="button" onclick="allPersons()">All persons</button>
+            </div>
             <script type="text/javascript" src="JSzadaca.js" ></script>
         </div>
     </body>
