All assignments completed , old ones are fixed!

--- a/JSzadaca.html
+++ b/JSzadaca.html
@@ -78,9 +78,7 @@
 
 
 
-<!-- Fixed assingment 1
-    where at click while input is empty shows "1" -->
+<!-- Everything completed and running well -->
 
-<!-- Fixed assingment 2
-where alert was shown for each value that we get 
-( now we get one alert ) -->
+<!-- Grayed out code in JS file are reference to 
+    mistakes I've made during this test -->
