Fixed the tallest person code

--- a/JSzadaca.html
+++ b/JSzadaca.html
@@ -65,7 +65,7 @@
             </div>
             <div class="divs">
                 <div></div>
-                <button type="button" onclick="highestPerson()">Highest person</button>
+                <button type="button" onclick="tallestPerson()">Tallest person</button>
             </div>
             <div class="divs">
                 <div></div>
